[metadata]
name = pyavsubs
version = 0.1
author = Luca Braglia
author_email = lbraglia@gmail.com
description = AV subtitles handling for Italian localization team
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/av-italia/pyavsubs

[options]
package_dir = pyavsubs
python_requires = >=3.7
install_requires = srt, matplotlib
